# csw

./: .flake8  .gitignore  .travis.yml  Dockerfile  README.md  azure-pipelines.yml  manage.py  pyproject.toml  requirements.txt  uwsgi-sample.ini  uwsgi.ini
.github/workflows/: codeql-analysis.yml  docker-publish.yml  image-build-scan.yml  multi-build.yaml  run-tests.yml
catalogue/: admin.py  api.py  forms.py  mappings.py  models.py  pycswsettings.py  test_admin.py  test_api.py  urls.py  views.py
catalogue/management/commands/: formalizedata.py
catalogue/migrations/: 0001_initial.py  0002_auto_20180802_0524.py  0003_auto_20180809_1125.py
catalogue/templates/catalogue/style/edit_inline/: stacked.html
catalogue/templates/catalogue/widgets/: style_file_input.html
csw/: middleware.py  settings.py  urls.py  wsgi.py
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  service.yaml
kustomize/overlays/prod/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
migrations/: migrate_from_oim.sh
