[tool.poetry]
name = "csw"
version = "1.3.13"
description = "Catalogue service for spatial records over HTTP in the Department of Biodiversity, Conservation and Attractions."
authors = ["ASU <asu@dbca.wa.gov.au>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# NOTE: pycsw is limited to <= Python 3.11.*
django = "4.2.17"
psycopg = {version = "3.2.9", extras = ["binary", "pool"]}
django-extensions = "3.2.3"
python-dotenv = "1.0.1"
dj-database-url = "2.2.0"
gunicorn = "23.0.0"
django-reversion = "5.1.0"
dbca-utils = "2.0.2"
whitenoise = { version = "6.7.0", extras = ["brotli"] }
lxml = { version = "5.3.0", extras = ["html-clean"] }
pycsw = "2.6.1"
# NOTE: click is required, but isn't declared as a dependency by pycsw.
click = "8.1.7"
pyproj = "3.7.0"
sqlalchemy = "2.0.36"
djangorestframework = "3.15.2"
django-filter = "24.3"
requests = "2.32.3"
django-storages = { version = "1.14.4", extras = ["azure"] }
mixer = "7.2.2"
pre-commit = "^4.0.1"
ipython = "^8.30.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipdb = "^0.13.13"
pre-commit = "^4.0.0"

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
