[project]
name = "csw"
version = "1.3.18"
description = "Catalogue service for spatial records over HTTP in the Department of Biodiversity, Conservation and Attractions."
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  # NOTE: pycsw is limited to <= Python 3.11.*
  "django==5.2.9",
  "psycopg[binary,pool]==3.3.2",
  "django-extensions==4.1",
  "python-dotenv==1.2.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "django-reversion==6.1.0",
  "dbca-utils==2.1.5",
  "whitenoise[brotli]==6.11.0",
  "lxml[html-clean]==6.0.2",
  "pycsw==2.6.2",
  "pyproj==3.7.2",
  "sqlalchemy==2.0.45",
  "djangorestframework==3.15.2",
  "django-filter==25.2",
  "requests==2.32.5",
  "django-storages[azure]==1.14.6",
]

[dependency-groups]
dev = ["ipython>=9.8.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.5.1"]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
